apps/glitchtip/glitchtip-valkey-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glitchtip-valkey
  namespace: glitchtip
spec:
  replicas: 1
  selector:
    matchLabels:
      app: glitchtip-valkey
  template:
    metadata:
      labels:
        app: glitchtip-valkey
    spec:
      nodeSelector:
        kubernetes.io/hostname: borgling-1
      tolerations:
        - key: node-role.kubernetes.io/control-plane
          operator: Exists
          effect: NoSchedule
      containers:
        - name: valkey
          image: valkey/valkey:8
