apps/glitchtip/glitchtip-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glitchtip-worker
  namespace: glitchtip
spec:
  replicas: 1
  selector:
    matchLabels:
      app: glitchtip-worker
  template:
    metadata:
      labels:
        app: glitchtip-worker
    spec:
      nodeSelector:
        kubernetes.io/hostname: borgling-1
      tolerations:
        - key: node-role.kubernetes.io/control-plane
          operator: Exists
          effect: NoSchedule
      containers:
        - name: glitchtip
          image: glitchtip/glitchtip:latest
          command: ["./bin/run-celery-with-beat.sh"]
          volumeMounts:
            - name: uploads
              mountPath: /code/uploads
      volumes:
        - name: uploads
          persistentVolumeClaim:
            claimName: glitchtip-uploads-pvc
