apps/glitchtip/04-glitchtip.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glitchtip-web
  namespace: glitchtip
spec:
  replicas: 1
  selector:
    matchLabels:
      app: glitchtip-web
  template:
    metadata:
      labels:
        app: glitchtip-web
    spec:
      nodeSelector:
        kubernetes.io/hostname: borgling-1
      tolerations:
        - key: node-role.kubernetes.io/control-plane
          operator: Exists
          effect: NoSchedule
      containers:
        - name: glitchtip
          image: glitchtip/glitchtip:latest
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: uploads
              mountPath: /code/uploads
      volumes:
        - name: uploads
          persistentVolumeClaim:
            claimName: glitchtip-uploads-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: glitchtip-web
  namespace: glitchtip
spec:
  selector:
    app: glitchtip-web
  ports:
    - port: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: glitchtip-web-nodeport
  namespace: glitchtip
spec:
  type: NodePort
  selector:
    app: glitchtip-web
  ports:
    - port: 8000
      nodePort: 31947
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glitchtip-worker
  namespace: glitchtip
spec:
  replicas: 1
  selector:
    matchLabels:
      app: glitchtip-worker
  template:
    metadata:
      labels:
        app: glitchtip-worker
    spec:
      nodeSelector:
        kubernetes.io/hostname: borgling-1
      tolerations:
        - key: node-role.kubernetes.io/control-plane
          operator: Exists
          effect: NoSchedule
      containers:
        - name: glitchtip
          image: glitchtip/glitchtip:latest
          command: ["./bin/run-celery-with-beat.sh"]
          volumeMounts:
            - name: uploads
              mountPath: /code/uploads
      volumes:
        - name: uploads
          persistentVolumeClaim:
            claimName: glitchtip-uploads-pvc
