apps/glitchtip/glitchtip-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: glitchtip-postgres
  namespace: glitchtip
spec:
  selector:
    app: glitchtip-postgres
  ports:
    - port: 5432
