apps/glitchtip/glitchtip-valkey-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: glitchtip-valkey
  namespace: glitchtip
spec:
  selector:
    app: glitchtip-valkey
  ports:
    - port: 6379
