apps/glitchtip/glitchtip-web-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: glitchtip-web-nodeport
  namespace: glitchtip
spec:
  type: NodePort
  selector:
    app: glitchtip-web
  ports:
    - port: 8000
      nodePort: 31947
