apps/glitchtip/glitchtip-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: glitchtip-web
  namespace: glitchtip
spec:
  selector:
    app: glitchtip-web
  ports:
    - port: 8000
