apps/glitchtip/glitchtip-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: glitchtip-ingress
  namespace: glitchtip
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: nginx
  rules:
    - host: glitchtip.th3borg.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: glitchtip-web
                port:
                  number: 8000
